# fuel-price-monitor

./: .env.example  .gitignore  COMMIT_MSG.tmp  README.md  _msg  commitmsg.txt  pyproject.toml
.github/workflows/: update-dashboard.yml
docs/: index.html
docs/data/: dashboard-2026-02.json  dashboard-2026-03.json  dashboard-2026-04.json  dashboard-2026-05.json  dashboard-2026-06.json  dashboard.json  index.json
sql/: macros.sql  schema.sql  views.sql
src/fuel_cartel_monitor/: __init__.py  analysis.py  brent.py  cli.py  db.py  ingest.py  server.py
src/fuel_price_monitor/: analysis.py
tests/: conftest.py  test_analysis.py  test_db.py  test_ingest.py
tests/fixtures/: sample_prices.csv  sample_stations.csv
