[project]
name = "fuel-cartel-monitor"
version = "0.1.0"
description = "Detect oligopolistic pricing patterns in German fuel markets using Tankerkoenig MTS-K data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Björn Bethge"}
]
keywords = ["fuel-prices", "cartel-detection", "duckdb", "mcp", "tankerkoenig", "oligopoly"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "duckdb>=1.1.0",
    "mcp>=1.0.0",
    "mcp-ui-server>=0.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.0",
]

[project.scripts]
fuel-cartel-monitor = "fuel_cartel_monitor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fuel_cartel_monitor"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
